--- a/webapp/src/main/resources/templates/fleet/confirm-order.html
+++ b/webapp/src/main/resources/templates/fleet/confirm-order.html
@@ -22,14 +22,14 @@
                 </div>
             </div>
             <div th:if="${orderDisallowed != null}">
-                <div class="alert alert-success alert-dismissible" role="alert">
+                <div class="alert alert-warning alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
                     Order Disallowed
                 </div>
             </div>
-            <H2>Orders To Confirm</H2>
-            <p th:if="${ordersToConfirm.isEmpty()}">No orders to confirm.</p>
+            <H2>Open Orders</H2>
+            <p th:if="${ordersToConfirm.isEmpty()}">No open orders</p>
             <table class="table" th:if="${!ordersToConfirm.isEmpty()}" id="orderTable">
                 <thead>
                 <th th:text="#{confirm.employee}">Employee</th>
@@ -41,7 +41,7 @@
                     <td th:text="${carUsage.employeeName}">employeeName</td>
                     <td th:text="${carUsage.orderDate}">orderDate</td>
                     <td style="text-align: center;">
-                        <a th:href="${'/fleet/confirm-order-detail?id=' + carUsage.orderId}" class="form-control" th:text="#{confirm.order}">Confirm
+                        <a th:href="${'/fleet/confirm-order-detail?id=' + carUsage.orderId}" class="btn btn-primary form-control" th:text="#{confirm.order}">Confirm
                             Order</a>
                     </td>
                 </tr>
