--- a/webapp/src/main/resources/templates/login.html
+++ b/webapp/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
                         <input type="password" id="password" name="password" class="form-control"/>
 
                         <div class="form-actions">
-                            <button type="submit" class="form-control">Log in</button>
+                            <button type="submit" class="btn btn-primary form-control">Log in</button>
                         </div>
                     </fieldset>
                 </form>
