--- a/webapp/src/main/resources/templates/employees/select-car.html
+++ b/webapp/src/main/resources/templates/employees/select-car.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="fragments/fragments :: div.scripts"></div>
 <script>
-    function submit(){
+    function submit() {
         document.forms["filter"].submit();
     }
 </script>
@@ -17,74 +17,81 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h2>  <p th:text="#{selectcar.ordercar}">Order Car </p> </h2>
+            <h2><p th:text="#{selectcar.ordercar}">Order Car </p></h2>
 
-            <h3> <p th:text="#{selectcar.fromcatalog}">From Catalog: </p></h3>
+            <h3><p th:text="#{selectcar.fromcatalog}">From Catalog: </p></h3>
 
-            <div>
+            <div style="width: 100%; float:left; margin-bottom: 5px;">
                 <form method="get" th:action="@{/employees/select-car/filter}" th:object="${filterCarsDTO}">
-                    <span style="font-weight:bold;"><p th:text="#{car.brand}">Brand</p> </span>
-                    <input id="brand" name="brand" type="text" th:field="*{brand}" onblur="submit()"/> -
-                    <span style="font-weight:bold;"><p th:text="#{car.model}">model</p> </span>
-                    <input id="carModel" name="carModel" type="text" th:field="*{model}" onblur="submit()"/><br/>
-                    <span style="font-weight:bold;"><p th:text="#{selectcar.funclevel}">func level</p> </span>
-                    <input name="level" id="allPossible" value="allPossible" type="radio" th:field="*{level}" onclick="submit()"/><span th:text="#{selectcar.allpossible}">All
+                    <div style="width: 49%; float:left;">
+                        <span style="font-weight:bold;"><p th:text="#{car.brand}">Brand</p> </span>
+                        <input id="brand" name="brand" type="text" th:field="*{brand}" onblur="submit()" class="form-control"/>
+                        <span style="font-weight:bold;"><p th:text="#{car.model}">model</p> </span>
+                        <input id="carModel" name="carModel" type="text" th:field="*{model}" onblur="submit()" class="form-control"/><br/>
+                    </div>
+                    <div style="width: 49%; float:right;">
+                        <span style="font-weight:bold;"><p th:text="#{selectcar.funclevel}">func level</p> </span>
+                        <input name="level" id="allPossible" value="allPossible" type="radio" th:field="*{level}"
+                               onclick="submit()"/><span th:text="#{selectcar.allpossible}">All
                     Possible</span>
-                    <input name="level" id="downgrade" value="downgrade" type="radio" th:field="*{level}" onclick="submit()"/><span th:text="#{selectcar.downgrade}">Downgrade</span>
-                    <input name="level" id="myLevel" value="myLevel" type="radio" th:field="*{level}" onclick="submit()"/><span th:text="#{selectcar.mylevel}">My Level</span>
-                    <input name="level" id="upgrade" value="upgrade" type="radio" th:field="*{level}" onclick="submit()"/><span th:text="#{selectcar.upgrade}">Upgrade</span><br/>
+                        <input name="level" id="downgrade" value="downgrade" type="radio" th:field="*{level}"
+                               onclick="submit()"/><span th:text="#{selectcar.downgrade}">Downgrade</span>
+                        <input name="level" id="myLevel" value="myLevel" type="radio" th:field="*{level}"
+                               onclick="submit()"/><span th:text="#{selectcar.mylevel}">My Level</span>
+                        <input name="level" id="upgrade" value="upgrade" type="radio" th:field="*{level}"
+                               onclick="submit()"/><span th:text="#{selectcar.upgrade}">Upgrade</span><br/>
+                    </div>
                 </form>
             </div>
 
             <hr/>
 
-            <p th:if="${dimensionalCarList.isEmpty()}"><p th:text="#{selectcar.nomatch}">No match</p></p>
-            <table class="table-bordered" th:if="${!dimensionalCarList.isEmpty()}">
-                <tbody>
-                <tr th:each="carList  : ${dimensionalCarList}">
-                    <td th:each="car : ${carList}">
-                        <span th:text="${car.brand + ' ' + car.model}" style="font-weight: bold;">carTitle</span>
-                        <br/>
-                        <a th:href="${'/employees/selected-car-detail?id=' + car.id}">
-                            <img th:src="${car.pictures[0]}" height="200" width="250" class="img-thumbnail"/>
-                        </a>
-                        <ul>
-                            <li th:if="${car.category &lt; functionalLevelForLoggedInUser}"><p th:text="#{selectcar.downgrade}">Downgrade</p></li>
-                            <li th:if="${car.category &gt; functionalLevelForLoggedInUser}"><p th:text="#{selectcar.upgrade}">Upgrade</p></li>
-                        </ul>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <div style="width: 100%; float:left;">
+                <p th:if="${dimensionalCarList.isEmpty()}">
 
-            <hr/>
+                <p th:text="#{selectcar.nomatch}">No match</p></p>
+                <table class="table" th:if="${!dimensionalCarList.isEmpty()}">
+                    <tbody>
+                    <tr th:each="carList  : ${dimensionalCarList}">
+                        <td th:each="car : ${carList}" style="text-align: center;">
+                            <span th:text="${car.brand + ' ' + car.model}" style="font-weight: bold;">carTitle</span>
+                            <br/>
+                            <a th:href="${'/employees/selected-car-detail?id=' + car.id}">
+                                <img th:src="${car.pictures[0]}" height="200" width="250" class="img-thumbnail"/>
+                            </a>
+                                <p th:if="${car.category &lt; functionalLevelForLoggedInUser}"
+                                        th:text="#{selectcar.downgrade}">Downgrade</p>
+                                <p th:if="${car.category &gt; functionalLevelForLoggedInUser}"
+                                        th:text="#{selectcar.upgrade}">Upgrade</p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
 
-            <h3><p th:text="#{selectcar.fromfreepool}">From free pool</p></h3>
+                <hr/>
 
-            <table class="table-bordered">
-                <tbody>
-                <tr th:each="carList  : ${dimensionalFreePoolCarList}">
-                    <td th:each="carUsage : ${carList}">
+                <h3><p th:text="#{selectcar.fromfreepool}">From free pool</p></h3>
+
+                <table class="table">
+                    <tbody>
+                    <tr th:each="carList  : ${dimensionalFreePoolCarList}">
+                        <td th:each="carUsage : ${carList}" style="text-align: center;">
                         <span th:text="${carUsage.orderedCar.car.brand + ' ' + carUsage.orderedCar.car.model}"
                               style="font-weight: bold;">carTitle</span>
-                        <br/>
-                        <a th:href="${'/employees/selected-free-pool-car-detail?id=' + carUsage.id}">
-                        <img th:src="${carUsage.orderedCar.car.pictures[0]}" height="200" width="250"
-                             class="img-thumbnail"/></a>
-                        <ul>
-                            <li>
-                                <p th:text="#{selectcar.color}"> Color</p> <span th:text="${carUsage.orderedCar.color}">carColor</span>
-                            </li>
-                            <li>
-                                <p th:text="#{selectcar.currentkm}"> Current km:  </p> <span th:text="${carUsage.usageUpdates[0].newTotalKm}">carColor</span>
-                            </li>
-                            </ul>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+                            <br/>
+                            <a th:href="${'/employees/selected-free-pool-car-detail?id=' + carUsage.id}">
+                                <img th:src="${carUsage.orderedCar.car.pictures[0]}" height="200" width="250"
+                                     class="img-thumbnail"/></a>
+                                    <p th:text="#{selectcar.color}"> Color</p> <span
+                                        th:text="${carUsage.orderedCar.color}">carColor</span>
 
-
+                                    <p th:text="#{selectcar.currentkm}"> Current km: </p> <span
+                                        th:text="${carUsage.usageUpdates[0].newTotalKm}">carColor</span>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
