--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -19,8 +19,7 @@
 
 <div class="navbar navbar-default headertop" th:fragment="header">
     <div class="container rdlogo">
-       <img src="http://www.realdolmen.com/static/images/RealDolmen-Logos/logo.png"
-          />
+       <img src="http://www.realdolmen.com/static/images/RealDolmen-Logos/logo.png"/>
     </div>
       <div class="container">
         <a class="navbar-brand rdportal" href="http://portal.realdolmen.com"><span class="rd-red">R</span><span class="rd-blue">D</span> Portal</a>
