edit pack adapted with ajax

--- a/webapp/src/main/resources/templates/fleet/editpack.html
+++ b/webapp/src/main/resources/templates/fleet/editpack.html
@@ -62,16 +62,15 @@
                 <div>
                     <div style=" float:left; width: 45%">
                     <h1 th:text="#{pack.selectedoptions}"> SelectedOptions </h1>
-                    <table>
+                    <table id="selectedoptions">
                         <tr th:each="caropt,idStat  : ${pack.carOptions}">
 
                             <td th:text="${caropt.name}"></td>
 
 
 
-                            <td>
-                                  <a th:href="${#mvc.url('EPC#removeOptionInEdit').arg(0, idStat.index).build()}" ><p th:text="#{pack.removeoption}">remove</p> </a> </td>
-                                <!--     <a th:href="@{/removeoptionedit/${caroption.id}}" > remove from pack </a> </td> -->
+                            <td>  <a  th:onclick="'javascript:removeOption(this);'"
+                                      class="btn btn-primary form-control" th:text="#{pack.removeoption}">remove</a> </td>
                                   </tr>
 
                               </table>
@@ -105,7 +104,7 @@
                               <tbody>
 
 
-                              <tr th:each="caroption  : ${allCarOptions}">
+                              <tr th:each="caroption, idStat : ${allCarOptions}">
 
                                   <td th:text="${caroption.name}"></td>
 
@@ -114,9 +113,9 @@
                                   <!--        <td> <a th:href="@{/addoptioninedit/${caroption.id}}" > Add to pack </a> </td>
                                                                         <td> <a th:onclick="'javascript:addInPack(\'' + ${caroption.id} + '\');'" > badd </a> </td>  -->
 
+                                  <td>  <a th:onclick="'javascript:addInPack(\'' + ${caroption.id} + '\',\'' + ${idStat.index} +  '\',\'' + ${caroption.name}+ '\');'"
+                                           class="btn btn-primary form-control" th:text="#{pack.addoptionto}">add </a> </td>
 
-
-                                                     <td> <a th:href="${#mvc.url('EPC#addOptionInEdit').arg(0, caroption.id).build()}" > <p th:text="#{pack.addoptionto}"> Add </p> </a> </td>
 
 
 
@@ -151,7 +150,98 @@
 </div>
 
 
+<script>
+function removeOption(element){
 
+
+var id = element.parentNode.parentNode.rowIndex;
+
+var request = $.ajax({
+url : "http://localhost:8080/fleet/removeajaxoptionedit",
+type : "post",
+data : "id=" + id
+});
+
+request.done(function(data) {
+
+document.getElementById('selectedoptions').deleteRow(id);
+
+
+});
+
+// callback handler that will be called on failure
+request.fail(function(jqXHR, textStatus, errorThrown) {
+// log the error to the console
+alert("The following error occured: " + textStatus, errorThrown);
+});
+
+
+
+
+}
+function addInPack(id, index, name){
+
+
+var request = $.ajax({
+url : "http://localhost:8080/fleet/addajaxoptioninedit",
+type : "post",
+data : "id=" + id
+});
+
+
+request.done(function(data) {
+var tableRef = document.getElementById('selectedoptions').getElementsByTagName('tbody')[0];
+
+if(!undefined ) {
+document.getElementById('selectedoptions').appendChild(document.createElement('tbody'));
+tableRef = document.getElementById('selectedoptions').getElementsByTagName('tbody')[0];
+}
+var rownumber = tableRef.rows.length;
+
+// Insert a row in the table at the last row
+var newRow   = tableRef.insertRow(tableRef.rows.length);
+
+
+
+
+
+// Insert a cell in the row at index 0
+var newCell  = newRow.insertCell(0);
+var newCell2 = newRow.insertCell(1);
+
+// Append a text node to the cell
+var newText  = document.createTextNode(name)
+newCell.appendChild(newText);
+
+var a = document.createElement('a');
+var linkText = document.createTextNode("Remove");
+a.appendChild(linkText);
+a.title = "Remove";
+
+var nbr = tableRef.getElementsByTagName('tr').length;
+a.onclick = function() {
+removeOption(this);
+}
+a.className = "btn btn-primary form-control";
+
+
+var newText2  = document.createTextNode(id)
+newCell2.appendChild(a);
+
+
+
+});
+
+// callback handler that will be called on failure
+request.fail(function(jqXHR, textStatus, errorThrown) {
+// log the error to the console
+alert("The following error occured: " + textStatus, errorThrown);
+});
+
+
+
+}
+</script>
 
 
 </body>
